--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 /* Google Font CDN Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
+
 *{
   margin: 0;
   padding: 0;
@@ -111,7 +112,7 @@ nav.sticky .menu-btn{
 .home{
   height: 100vh;
   width: 100%;
-  background: url("images/background.png") no-repeat;
+  background: url("images/My.png") no-repeat;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -307,6 +308,78 @@ section .button button:hover{
   color: #4070f4;
 }
 
+/* skills section styling */
+
+.skills .skills-details .column{
+    width: calc(50% - 30px);
+}
+.skills .skills-details .left .text{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 10px;
+}
+.skills .skills-details .left p{
+    text-align: justify;
+}
+.skills .skills-details .left a{
+    display: inline-block;
+    background: crimson;
+    color: #fff;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 8px 16px;
+    margin-top: 20px;
+    border-radius: 6px;
+    border: 2px solid crimson;
+    transition: all 0.3s ease;
+}
+.skills .skills-details .left a:hover{
+    color: crimson;
+    background: none;
+}
+.skills .skills-details .right .bars{
+    margin-bottom: 15px;
+}
+.skills .skills-details .right .info{
+    display: flex;
+    margin-bottom: 5px;
+    align-items: center;
+    justify-content: space-between;
+}
+.skills .skills-details .right span{
+    font-weight: 500;
+    font-size: 18px;
+}
+.skills .skills-details .right .line{
+    height: 5px;
+    width: 100%;
+    background: lightgrey;
+    position: relative;
+}
+.skills .skills-details .right .line::before{
+    content: "";
+    position: absolute;
+    height: 100%;
+    left: 0;
+    top: 0;
+    background: crimson;
+}
+.skills-details .right .html::before{
+    width: 90%;
+}
+.skills-details .right .css::before{
+    width: 60%;
+}
+.skills-details .right .js::before{
+    width: 80%;
+}
+.skills-details .right .php::before{
+    width: 60%;
+}
+.skills-details .right .mysql::before{
+    width: 80%;
+}
+
 /* My Services CSS */
 .services .boxes{
   display: flex;
@@ -352,6 +425,7 @@ section .button button:hover{
 .services .boxes .box:hover p{
   color: #fff;
 }
+
 /* Contact Me CSS */
 .contact{
   background: #F0F8FF;
@@ -365,6 +439,52 @@ section .button button:hover{
   text-align: center;
   margin: auto;
 }
+
+
+/* contact section styling */
+.contact .right form .fields{
+  display: flex;
+}
+.contact .right form .field,
+.contact .right form .fields .field{
+  height: 45px;
+  width: 100%;
+  margin-bottom: 15px;
+}
+.contact .right form .textarea{
+  height: 80px;
+  width: 100%;
+}
+.contact .right form .name{
+  margin-right: 10px;
+}
+.contact .right form .field input,
+.contact .right form .textarea textarea{
+  height: 100%;
+  width: 100%;
+  border: 1px solid lightgrey;
+  border-radius: 6px;
+  outline: none;
+  padding: 0 15px;
+  font-size: 17px;
+  font-family: 'Poppins', sans-serif;
+  transition: all 0.3s ease;
+}
+.contact .right form .field input:focus,
+.contact .right form .textarea textarea:focus{
+  border-color: #b3b3b3;
+}
+.contact .right form .textarea textarea{
+padding-top: 10px;
+resize: none;
+}
+.contact .right form .button-area{
+display: flex;
+align-items: center;
+
+
+}
+
 
 /* Footer CSS */
 footer{
@@ -408,7 +528,7 @@ footer .text span a:hover{
 @media (max-width: 1000px) {
   .about .about-details{
     justify-content: center;
-    flex-direction: column;
+    flex-direction:  ;
   }
   .about .about-details .left{
     display: flex;
@@ -508,3 +628,10 @@ footer .text span a:hover{
     color: #4070f4;
   }
 }
+
+
+
+
+/* ======================================================== */
+
+
