--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Google Font CDN Link */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Ubuntu:wght@400;500;700&display=swap');
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -11,22 +11,25 @@
 
 /* Custom Scroll Bar CSS */
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
+
 ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+  background: #f1f1f1;
 }
+
 ::-webkit-scrollbar-thumb {
-    background: #6e93f7;
-    border-radius: 12px;
-    transition: all 0.3s ease;
+  background: #6e93f7;
+  border-radius: 12px;
+  transition: all 0.3s ease;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: #4070f4;
+  background: #4070f4;
 }
+
 /* navbar styling */
-nav{
+nav {
   position: fixed;
   width: 100%;
   padding: 20px 0;
@@ -34,61 +37,73 @@ nav{
   transition: all 0.3s ease;
   font-family: 'Ubuntu', sans-serif;
 }
-nav.sticky{
+
+nav.sticky {
   background: #4070f4;
   padding: 13px 0;
 }
-nav .navbar{
+
+nav .navbar {
   width: 90%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin: auto;
 }
-nav .navbar .logo a{
+
+nav .navbar .logo a {
   font-weight: 500;
   font-size: 35px;
   color: #4070f4;
 }
-nav.sticky .navbar .logo a{
+
+nav.sticky .navbar .logo a {
   color: #fff;
 }
-nav .navbar .menu{
+
+nav .navbar .menu {
   display: flex;
   position: relative;
 }
-nav .navbar .menu li{
+
+nav .navbar .menu li {
   list-style: none;
   margin: 0 8px;
 }
-.navbar .menu a{
+
+.navbar .menu a {
   font-size: 18px;
   font-weight: 500;
   color: #0E2431;
   padding: 6px 0;
   transition: all 0.4s ease;
 }
-.navbar .menu a:hover{
+
+.navbar .menu a:hover {
   color: #4070f4;
 }
-nav.sticky .menu a{
+
+nav.sticky .menu a {
   color: #FFF;
 }
-nav.sticky .menu a:hover{
+
+nav.sticky .menu a:hover {
   color: #0E2431;
 }
-.navbar .media-icons a{
+
+.navbar .media-icons a {
   color: #4070f4;
   font-size: 18px;
   margin: 0 6px;
 }
-nav.sticky .media-icons a{
+
+nav.sticky .media-icons a {
   color: #FFF;
 }
 
 /* Side Navigation Menu Button CSS */
 nav .menu-btn,
-.navbar .menu .cancel-btn{
+.navbar .menu .cancel-btn {
   position: absolute;
   color: #fff;
   right: 30px;
@@ -98,18 +113,21 @@ nav .menu-btn,
   transition: all 0.3s ease;
   display: none;
 }
-nav .menu-btn{
+
+nav .menu-btn {
   color: #4070f4;
 }
-nav.sticky .menu-btn{
+
+nav.sticky .menu-btn {
   color: #FFF;
 }
-.navbar .menu .menu-btn{
+
+.navbar .menu .menu-btn {
   color: #fff;
 }
 
 /* home section styling */
-.home{
+.home {
   height: 100vh;
   width: 100%;
   background-image: url("images/My.png") no-repeat;
@@ -118,7 +136,8 @@ nav.sticky .menu-btn{
   background-attachment: fixed;
   font-family: 'Ubuntu', sans-serif;
 }
-.home .home-content{
+
+.home .home-content {
   width: 90%;
   height: 100%;
   margin: auto;
@@ -126,30 +145,36 @@ nav.sticky .menu-btn{
   flex-direction: column;
   justify-content: center;
 }
-.home .text-one{
+
+.home .text-one {
   font-size: 25px;
   color: #0E2431;
 }
-.home .text-two{
+
+.home .text-two {
   color: #0E2431;
   font-size: 75px;
   font-weight: 600;
   margin-left: -3px;
 }
-.home .text-three{
+
+.home .text-three {
   font-size: 40px;
   margin: 5px 0;
   color: #4070f4;
 }
-.home .text-four{
+
+.home .text-four {
   font-size: 23px;
   margin: 5px 0;
   color: #0E2431;
 }
-.home .button{
+
+.home .button {
   margin: 14px 0;
 }
-.home .button button{
+
+.home .button button {
   outline: none;
   padding: 8px 16px;
   border-radius: 6px;
@@ -161,42 +186,47 @@ nav.sticky .menu-btn{
   border: 2px solid transparent;
   transition: all 0.4s ease;
 }
-.home .button button:hover{
+
+.home .button button:hover {
   border-color: #4070f4;
   background-color: #fff;
   color: #4070f4;
 }
 
 /* About Section Styling */
-/* Those Elements Where We Have Apply Same CSS,
- I'm Selecting Directly 'Section Tag' and 'Class'  */
-section{
+
+section {
   padding-top: 40px;
 }
-section .content{
+
+section .content {
   width: 80%;
   margin: 40px auto;
   font-family: 'Poppins', sans-serif;
 }
-.about .about-details{
+
+.about .about-details {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-section .title{
+
+section .title {
   display: flex;
   justify-content: center;
   margin-bottom: 40px;
 }
-section .title span{
+
+section .title span {
   color: #0E2431;
   font-size: 30px;
   font-weight: 600;
   position: relative;
   padding-bottom: 8px;
 }
+
 section .title span::before,
-section .title span::after{
+section .title span::after {
   content: '';
   position: absolute;
   height: 3px;
@@ -205,39 +235,47 @@ section .title span::after{
   left: 0;
   bottom: 0;
 }
-section .title span::after{
+
+section .title span::after {
   bottom: -7px;
   width: 70%;
   left: 50%;
   transform: translateX(-50%);
 }
-.about .about-details .left{
+
+.about .about-details .left {
   width: 45%;
 }
-.about .left img{
+
+.about .left img {
   height: 350px;
-  width: 350px;
+  width: 90%;
   object-fit: cover;
   border-radius: 12px;
-  display: flex;
 }
-.about-details .right{
-  width: 55%;
+
+.about-details .right {
+  width: 50%;
 }
-section  .topic{
+
+section .topic {
   color: #0E2431;
   font-size: 25px;
   font-weight: 500;
   margin-bottom: 10px;
 }
-.about-details .right p{
+
+.about-details .right p {
   text-align: justify;
   color: #0E2431;
+  font-size: 20px;
 }
-section .button{
+
+section .button {
   margin: 16px 0;
 }
-section .button button{
+
+section .button button {
   outline: none;
   padding: 8px 16px;
   border-radius: 4px;
@@ -245,149 +283,170 @@ section .button button{
   font-weight: 400;
   background: #4070f4;
   color: #fff;
-  border: 2px solid transparent;
-  cursor: pointer;
-  transition: all 0.4s ease;
-}
-section .button button:hover{
-  border-color: #4070f4;
-  background-color: #fff;
-  color: #4070f4;
 }
 
- /* My Skills CSS */
- .skills{
-   background: #F0F8FF;
- }
- .skills .content{
-   padding: 40px 0;
- }
- .skills .skills-details{
-   display: flex;
-   justify-content: space-between;
-   align-items: center;
- }
- .skills-details .text{
-   width: 50%;
- }
- .skills-details p{
-   color: #0E2431;
-   text-align: justify;
- }
-.skills .skills-details .experience{
+
+
+/* My Skills CSS */
+.skills {
+  background: #F0F8FF;
+}
+
+.skills .content {
+  padding: 40px 0;
+}
+
+.skills .skills-details {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.skills-details .text {
+  width: 50%;
+}
+
+.skills-details p {
+  font-size: 19px;
+  color: #0E2431;
+  text-align: justify;
+}
+
+.skills .skills-details .experience {
   display: flex;
   align-items: center;
   margin: 0 10px;
 }
-.skills-details .experience .num{
+
+.skills-details .experience .num {
   color: #0E2431;
   font-size: 80px;
 }
-.skills-details .experience .exp{
+
+.skills-details .experience .exp {
   color: #0E2431;
   margin-left: 20px;
   font-size: 18px;
   font-weight: 500;
   margin: 0 6px;
 }
-.skills-details .boxes{
+
+.skills-details .boxes {
   width: 45%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.skills-details .box{
+
+.skills-details .box {
   width: calc(100% / 2 - 20px);
   margin: 20px 0;
 }
-.skills-details .boxes .topic{
+
+.skills-details .boxes .topic {
   font-size: 20px;
   color: #4070f4;
 }
-.skills-details .boxes .per{
+
+.skills-details .boxes .per {
   font-size: 60px;
   color: #4070f4;
 }
 
 /* skills section styling */
+.skills .skills-details .column {
+  display: inline-block;
+  width: 48%;
+}
 
-.skills .skills-details .column{
-    width: calc(50% - 30px);
+.skills .skills-details .left .text {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 10px;
 }
-.skills .skills-details .left .text{
-    font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
+
+.skills .skills-details .left p {
+  text-align: justify;
 }
-.skills .skills-details .left p{
-    text-align: justify;
+
+.skills .skills-details .left a {
+  display: inline-block;
+  background: crimson;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 500;
+  padding: 8px 16px;
+  margin-top: 20px;
+  border-radius: 6px;
+  border: 2px solid crimson;
+  transition: all 0.3s ease;
 }
-.skills .skills-details .left a{
-    display: inline-block;
-    background: crimson;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 500;
-    padding: 8px 16px;
-    margin-top: 20px;
-    border-radius: 6px;
-    border: 2px solid crimson;
-    transition: all 0.3s ease;
+
+.skills .skills-details .left a:hover {
+  color: crimson;
+  background: none;
 }
-.skills .skills-details .left a:hover{
-    color: crimson;
-    background: none;
+
+.skills .skills-details .right .bars {
+  margin-bottom: 15px;
 }
-.skills .skills-details .right .bars{
-    margin-bottom: 15px;
+
+.skills .skills-details .right .info {
+  display: flex;
+  margin-bottom: 5px;
+  align-items: center;
+  justify-content: space-between;
 }
-.skills .skills-details .right .info{
-    display: flex;
-    margin-bottom: 5px;
-    align-items: center;
-    justify-content: space-between;
+
+.skills .skills-details .right span {
+  font-weight: 500;
+  font-size: 18px;
 }
-.skills .skills-details .right span{
-    font-weight: 500;
-    font-size: 18px;
+
+.skills .skills-details .right .line {
+  height: 5px;
+  width: 100%;
+  background: lightgrey;
+  position: relative;
 }
-.skills .skills-details .right .line{
-    height: 5px;
-    width: 100%;
-    background: lightgrey;
-    position: relative;
+
+.skills .skills-details .right .line::before {
+  content: "";
+  position: absolute;
+  height: 100%;
+  left: 0;
+  top: 0;
+  background: crimson;
 }
-.skills .skills-details .right .line::before{
-    content: "";
-    position: absolute;
-    height: 100%;
-    left: 0;
-    top: 0;
-    background: crimson;
+
+.skills-details .right .html::before {
+  width: 90%;
 }
-.skills-details .right .html::before{
-    width: 90%;
+
+.skills-details .right .css::before {
+  width: 60%;
 }
-.skills-details .right .css::before{
-    width: 60%;
+
+.skills-details .right .js::before {
+  width: 80%;
 }
-.skills-details .right .js::before{
-    width: 80%;
+
+.skills-details .right .php::before {
+  width: 60%;
 }
-.skills-details .right .php::before{
-    width: 60%;
-}
-.skills-details .right .mysql::before{
-    width: 80%;
+
+.skills-details .right .mysql::before {
+  width: 80%;
 }
 
 /* My Services CSS */
-.services .boxes{
+.services .boxes {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
-.services .boxes .box{
+
+.services .boxes .box {
   margin: 20px 0;
   width: calc(100% / 3 - 20px);
   text-align: center;
@@ -397,11 +456,13 @@ section .button button:hover{
   cursor: default;
   transition: all 0.4s ease;
 }
-.services .boxes .box:hover{
+
+.services .boxes .box:hover {
   background: #4070f4;
   color: #fff;
 }
-.services .boxes .box .icon{
+
+.services .boxes .box .icon {
   height: 50px;
   width: 50px;
   background: #4070f4;
@@ -413,29 +474,34 @@ section .button button:hover{
   margin: 0 auto 10px auto;
   transition: all 0.4s ease;
 }
-.boxes .box:hover .icon{
+
+.boxes .box:hover .icon {
   background-color: #fff;
   color: #4070f4;
 }
+
 .services .boxes .box:hover .topic,
-.services .boxes .box:hover p{
+.services .boxes .box:hover p {
   color: #0E2431;
   transition: all 0.4s ease;
 }
+
 .services .boxes .box:hover .topic,
-.services .boxes .box:hover p{
+.services .boxes .box:hover p {
   color: #fff;
 }
 
 /* Contact Me CSS */
-.contact{
+.contact {
   background: #F0F8FF;
 }
-.contact .content{
+
+.contact .content {
   margin: 0 auto;
   padding: 30px 0;
 }
-.contact .text{
+
+.contact .text {
   width: 80%;
   text-align: center;
   margin: auto;
@@ -443,24 +509,28 @@ section .button button:hover{
 
 
 /* contact section styling */
-.contact .right form .fields{
+.contact .right form .fields {
   display: flex;
 }
+
 .contact .right form .field,
-.contact .right form .fields .field{
+.contact .right form .fields .field {
   height: 45px;
   width: 100%;
   margin-bottom: 15px;
 }
-.contact .right form .textarea{
+
+.contact .right form .textarea {
   height: 80px;
   width: 100%;
 }
-.contact .right form .name{
+
+.contact .right form .name {
   margin-right: 10px;
 }
+
 .contact .right form .field input,
-.contact .right form .textarea textarea{
+.contact .right form .textarea textarea {
   height: 100%;
   width: 100%;
   border: 1px solid lightgrey;
@@ -471,49 +541,57 @@ section .button button:hover{
   font-family: 'Poppins', sans-serif;
   transition: all 0.3s ease;
 }
+
 .contact .right form .field input:focus,
-.contact .right form .textarea textarea:focus{
+.contact .right form .textarea textarea:focus {
   border-color: #b3b3b3;
 }
-.contact .right form .textarea textarea{
-padding-top: 10px;
-resize: none;
+
+.contact .right form .textarea textarea {
+  padding-top: 10px;
+  resize: none;
 }
-.contact .right form .button-area{
-display: flex;
-align-items: center;
+
+.contact .right form .button-area {
+  display: flex;
+  align-items: center;
 
 
 }
 
 
 /* Footer CSS */
-footer{
+footer {
   background: #4070f4;
   padding: 15px 0;
   text-align: center;
   font-family: 'Poppins', sans-serif;
 }
-footer .text span{
+
+footer .text span {
   font-size: 17px;
   font-weight: 400;
   color: #fff;
 }
-footer .text span a{
+
+footer .text span a {
   font-weight: 500;
   color: #FFF;
 }
-footer .text span a:hover{
+
+footer .text span a:hover {
   text-decoration: underline;
 }
+
 /* Scroll TO Top Button CSS */
-.scroll-button a{
+.scroll-button a {
+  z-index: 1;
   position: fixed;
   bottom: 20px;
   right: 20px;
   color: #fff;
   background: #4070f4;
-  padding: 7px 12px;;
+  padding: 7px 12px;
   font-size: 18px;
   border-radius: 6px;
   box-shadow: rgba(0, 0, 0, 0.15);
@@ -521,43 +599,38 @@ footer .text span a:hover{
 }
 
 /* Responsive Media Query */
-@media (max-width: 1190px) {
-  section .content{
-    width: 85%;
-  }
-}
+
 @media (max-width: 1000px) {
-  .about .about-details{
+  .about .about-details {
     justify-content: center;
     flex-direction: column;
   }
-  .about .about-details .left{
+
+  .about .about-details .left {
     display: flex;
     justify-content: center;
     width: 100%;
   }
-  .about-details .right{
-    display: flex;
-    justify-content: center;
-    width: 100%;
-  }
-  .services .boxes .box{
+
+  .services .boxes .box {
     margin: 20px 0;
     width: calc(100% / 2 - 20px);
   }
 }
+
 @media (max-width: 900px) {
-  .about .left img{
+  .about .left img {
     height: 350px;
     width: 350px;
   }
 }
 
 @media (max-width: 750px) {
-  nav .navbar{
+  nav .navbar {
     width: 90%;
   }
-  nav .navbar .menu{
+
+  nav .navbar .menu {
     position: fixed;
     left: -100%;
     top: 0;
@@ -570,76 +643,184 @@ footer .text span a:hover{
     align-items: center;
     transition: all 0.5s ease;
   }
-  .navbar.active .menu{
+
+  .navbar.active .menu {
     left: 0;
   }
-  nav .navbar .menu a{
+
+  nav .navbar .menu a {
     font-size: 23px;
     display: block;
     color: #fff;
     margin: 10px 0;
   }
-  nav.sticky .menu a:hover{
+
+  nav.sticky .menu a:hover {
     color: #4070f4;
   }
-  nav .navbar .media-icons{
+
+  nav .navbar .media-icons {
     display: none;
   }
+
   nav .menu-btn,
-  .navbar .menu .cancel-btn{
+  .navbar .menu .cancel-btn {
     display: block;
   }
-  .home .text-two{
+
+  .home .text-two {
     font-size: 65px;
   }
-  .home .text-three{
+
+  .home .text-three {
     font-size: 35px;
   }
-  .skills .skills-details{
+
+  .skills .skills-details {
     align-items: center;
     justify-content: center;
     flex-direction: column;
   }
-  .skills-details .text{
+
+  .skills-details .text {
     width: 100%;
     margin-bottom: 50px;
   }
-  .skills-details .boxes{
+
+  .skills-details .boxes {
     justify-content: center;
     align-items: center;
     width: 100%;
   }
-  .services .boxes .box{
+
+  .skills .skills-details .column {
+    width: 100%;
+  }
+
+  .services .boxes .box {
     margin: 20px 0;
     width: 100%;
   }
-  .contact .text{
+
+  .services .boxes .box p {
+    font-size: 15px;
+  }
+
+  .contact .text {
     width: 100%;
-}
+    font-size: 15px;
+  }
 }
 
-@media (max-width: 500px){
-  .home .text-two{
+@media (max-width: 500px) {
+  .home .text-two {
     font-size: 55px;
   }
-  .home .text-three{
+
+  .home .text-three {
     font-size: 33px;
   }
-  .skills-details .boxes .per{
+
+  .skills-details .boxes .per {
     font-size: 50px;
     color: #4070f4;
   }
 }
 
 
-@media (max-width: 768px){
-  html{
+@media (max-width: 768px) {
+  nav{
+    padding: 0;
+  }
+  html {
     font-size: 55%;
   }
 
-  .about .left img{
-      display: block;
+  .about .left img {
+    display: block;
+    width: 100%;
   }
 }
 
-/* ======================================================== */
+@media only screen and (max-width: 768px) {
+  section .about-details {
+    flex-direction: column;
+  }
+
+  .about .about-details .left {
+    width: 100%;
+  }
+
+  .about .left img {
+    height: auto;
+    width: 100%;
+    object-fit: cover;
+  }
+
+  .about-details .right {
+    width: 100%;
+    margin: 12%;
+  }
+
+  section .title span {
+    font-size: 24px;
+  }
+
+  section .topic {
+    display: inline-block;
+    width: 100%;
+    font-size: 25px;
+  }
+
+  section .button button {
+    font-size: 20px;
+  }
+
+}
+
+
+/* card */
+.cards-wrapper {
+  display: flex;
+  justify-content: center;
+}
+.card img {
+  max-width: 100%;
+  max-height: 100%;
+}
+.card-img-top{
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.15);
+}
+.project-icon{
+  color: black;
+  float: right;
+  font-size: 150%;
+}
+.card-title{
+  display: inline-block;
+}
+.card {
+  width: 100%;
+  margin: 0 0.5em;
+  box-shadow: 2px 6px 8px 0 rgba(22, 22, 26, 0.18);
+  border: none;
+  border-radius: 0;
+}
+.carousel-inner {
+  padding: 1em;
+}
+
+.carousel-next-icon,
+.carousel-prev-icon {
+  width: 30px;
+  height: 30px;
+}
+.carousel-control-prev:hover{background-color: black;}
+.carousel-control-next:hover{background-color: black;}
+
+@media (min-width: 768px) {
+  .card img {
+    /* height: 60%;
+    width: 50%; */
+  }
+}
